--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
-<body class="container-fluid bg-secondary">
+<body class="container-fluid bg-secondary text-white">
     <div class="text-center">
         <h1>My Portfolio</h1>
-        <img src="">
         <div>
             <h3>My Skills</h3>
         </div>
